--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
       </article>
       <button class="button__end button" type="button" onclick="window['popup'].showModal()" aria-controls="popup">
         <img class="image_button" src="./images/floppy.svg" alt="Дискета" />
-        <h2 class="button__text">Сохранить на память</h2>
+        <span class="button__text">Сохранить на память</span>
       </button>
       <dialog class="modal" id="popup">
         <div class="modal__content">
