--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           знания могут повлиять на ваше будущее.
         </p>
         <p class="card__text card__text-end">
-          Место для ваших воспоминаний о начале обучения
+          Место для ваших воспоминаний о начале обучения.
         </p>
         <div class="card__icon">
           <button class="card__icon-button" type="button">
