--- a/index.html
+++ b/index.html
@@ -497,11 +497,7 @@
         onclick="window['popup'].showModal()"
         aria-controls="popup"
       >
-        <svg
-          class="image_button"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 39 39"
-        >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39 39">
           <use href="./svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
@@ -509,7 +505,7 @@
       <dialog class="modal" id="popup">
         <div class="modal__content">
           <svg
-            class="image_button"
+            class="modal__image_button"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 39 39"
           >
